Phase 4 Testing in progress

--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuantumMateria Story Engine</title>
     
-    <!-- PicoCSS v2 - Class-less Fluid -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.fluid.classless.min.css"/>
-    
+    <!-- PicoCSS v2 - Full (class-based) Fluid build for hybrid approach -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.indigo.min.css"/>
+
     <!-- Inter Font -->
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- Left Sidebar: Navigation -->
-    <aside>
+    <aside class="app-sidebar">
         <header>
             <hgroup>
                 <h1>Story Engine</h1>
@@ -58,5 +58,6 @@
     <script src="/static/entities.js"></script>
     <script src="/static/page-loader.js"></script>
     <script src="/static/app.js"></script>
+    <script src="/static/scene-editor.js"></script>
 </body>
 </html>
