1000 lines of javascript for scene-editor.js makes me sick

--- a/static/pages/scene-editor.html
+++ b/static/pages/scene-editor.html
@@ -71,6 +71,9 @@
             <button id="undo-last-block" type="button" class="secondary outline" title="Undo last block change">Undo</button>
             <small id="scene-save-status" style="opacity:0.8;"></small>
         </div>
-        <div id="scene-global-status" style="margin-top:0.25rem; font-size:0.75rem; opacity:0.75;"></div>
+        <div id="scene-global-status" class="status-component" data-level="info">
+            <span class="status-icon">ℹ️</span>
+            <span class="status-message">Ready</span>
+        </div>
     </aside>
 </section>
